welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:15: error: not found: value mUn
    if (nums(i)>=mUn){
                 ^max2Value:16: error: not found: value mDeux
      mDeux = mUn
      ^max2Value:17: error: not found: value mUn
      mUn = nums(i)
      ^max2Value:20: error: not found: value mDeux
  return mDeux
         ^