welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var longueurT = nums.length
  
  if (nums(0)>=nums(1)){
    var mUn = nums(0)
    var mDeux = nums(1)
  }else{
    var mUn = nums(1)
    var mDeux= nums(0)
  }
  
  
  //On parcoure tout le tableau
  for (i <- 0 to longueurT-1){
    if (nums(i)>=mUn){
      mDeux = mUn
      mUn = nums(i)
    }
  }
  return mDeux
}